<resources>
    <string name="app_name">ContactBook</string>
    <string name="title">Contacts</string>
    <string name="name">Name</string>
    <string name="photo">Photo</string>
    <string name="mobile_phone">Mobile phone</string>
    <string name="home_phone">Home phone</string>
    <string name="work_phone">Work phone</string>
    <string name="email">Email</string>
    <string name="save">Save contact</string>
    <string name="remove">Remove contact</string>
    <string name="add">Add contact</string>
    <string name="missed_permissions">Required permissions are missed</string>
</resources>